# aynipos

./: .gitignore  ARCHITECTURE.md  ROADMAP.md  package.json  rust-toolchain-win7.toml
.agents/workflows/: aynipos-dev.md  user-docs.md
.github/workflows/: build-windows.yml
docs/usuario/: 1_1_atajos_teclado.md  1_2_lector_codigo_barras.md  1_3_descuentos.md  1_4_cliente_en_la_venta.md  1_5_notas_venta.md  1_6_impresion_recibo.md  1_7_sonidos_feedback_visual.md  1_8_validaciones.md  1_9_errores_formularios.md  2_1_editar_producto.md  2_2_importar_exportar.md  2_3_control_lotes_vencimiento.md  2_5_historial_movimientos.md  3_1_ventas_rango_fechas.md  3_2_reporte_cierre_caja.md  3_3_productos_mas_vendidos.md  3_4_graficos_ventas.md  3_5_margen_ganancia.md  3_6_reporte_inventario.md  3_7_exportar_excel_pdf.md  5_1_login_pin.md  5_2_roles_permisos.md  5_3_registro_actividad.md  5_4_cajero_por_turno.md  README.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_sale_notes.sql  003_lot_movements.sql  004_users.sql  005_audit_log.sql  006_timezone_bolivia.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audit_log.rs  backup.rs  cash_register.rs  customers.rs  dashboard.rs  import_export.rs  inventory.rs  license.rs  mod.rs  products.rs  receipts.rs  reports.rs  sales.rs  settings.rs  users.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/tests/: cash_register.rs  customers.rs  inventory.rs  mod.rs  products.rs  sales.rs
src/lib/services/: api.ts  cashReportPrint.ts  permissions.ts  receipt.ts  sounds.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
src/routes/about/: AboutModal.svelte
src/routes/activation/: ActivationScreen.svelte
src/routes/customers/: CustomersPage.svelte
src/routes/inventory/: InventoryPage.svelte
tools/license-gen/: Cargo.toml
(+6 files in other folders)
