[package]
name = "aynipos"
version = "0.1.0"
description = "AyniPOS — Punto de Venta rápido y ligero para Bolivia"
authors = ["milmen"]
edition = "2021"

[lib]
name = "aynipos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CSV
csv = "1"

# File dialogs
tauri-plugin-dialog = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"

# License system
machine-uid = "0.5"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
